// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUserToFlatModal Screen renders correctly 1`] = `
Array [
  " ",
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        false,
      ]
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "zIndex": 1000,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "left": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": null,
              "opacity": 0,
              "overflow": "hidden",
              "width": 675,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "padding": 14,
                  "paddingHorizontal": 18,
                },
                Object {
                  "alignItems": "flex-start",
                },
                Object {
                  "backgroundColor": "#F9F9FB",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#DAD9DC",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#151822",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "500",
                  },
                  undefined,
                ]
              }
            >
              Add user
            </Text>
          </View>
          <RCTScrollView>
            <View>
              <View
                style={
                  Array [
                    Object {
                      "paddingHorizontal": 18,
                      "paddingVertical": 24,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                    undefined,
                  ]
                }
              >
                <TextInput
                  allowFontScaling={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Username"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "borderColor": "#eaeaea",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "fontSize": 14,
                      "height": 45,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginRight": 5,
                      "marginTop": 5,
                      "minWidth": 100,
                      "paddingLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
                <Text
                  style={
                    Object {
                      "color": "red",
                      "fontSize": 13,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                      "marginTop": 5,
                      "textAlign": "center",
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#5cd07f",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Add User
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#ff9933",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Close
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </View>,
  " ",
]
`;

exports[`BottomNavigationBar Screen renders correctly 1`] = `
<footer
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#009999",
      "bottom": "0",
      "display": "flex",
      "height": "75px",
      "justifyContent": "space-evenly",
      "left": "0",
      "paddingInline": "5px",
      "position": "fixed",
      "width": "100%",
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Calendar 
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Tasks 
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Home 
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Mates 
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Bills 
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <img
      alt=" "
      src={Object {}}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    />
    <Text>
       Debts 
    </Text>
  </View>
</footer>
`;

exports[`CreateFlatModal Screen renders correctly 1`] = `
Array [
  " ",
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        false,
      ]
    }
  >
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "zIndex": 1000,
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "left": 0,
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 8,
              "height": null,
              "opacity": 0,
              "overflow": "hidden",
              "width": 675,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "padding": 14,
                  "paddingHorizontal": 18,
                },
                Object {
                  "alignItems": "flex-start",
                },
                Object {
                  "backgroundColor": "#F9F9FB",
                  "borderBottomWidth": 0.5,
                  "borderColor": "#DAD9DC",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#151822",
                    "fontFamily": "System",
                    "fontSize": 15,
                    "fontWeight": "500",
                  },
                  undefined,
                ]
              }
            >
              Create flat
            </Text>
          </View>
          <RCTScrollView>
            <View>
              <View
                style={
                  Array [
                    Object {
                      "paddingHorizontal": 18,
                      "paddingVertical": 24,
                    },
                    Object {
                      "paddingTop": 0,
                    },
                    undefined,
                  ]
                }
              >
                <TextInput
                  allowFontScaling={true}
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Name"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "borderColor": "#eaeaea",
                      "borderRadius": 5,
                      "borderWidth": 1,
                      "fontSize": 14,
                      "height": 45,
                      "marginBottom": 5,
                      "marginLeft": 5,
                      "marginRight": 5,
                      "marginTop": 5,
                      "minWidth": 100,
                      "paddingLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#5cd07f",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Submit
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "borderRadius": 3,
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 3,
                      },
                      undefined,
                      false,
                    ]
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": false,
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#ff9933",
                          "borderColor": "#2089dc",
                          "borderRadius": 5,
                          "borderWidth": 0,
                          "flexDirection": "row",
                          "height": 45,
                          "justifyContent": "center",
                          "marginLeft": 25,
                          "marginRight": 25,
                          "marginTop": 10,
                          "padding": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 18,
                            "paddingVertical": 1,
                            "textAlign": "center",
                          }
                        }
                      >
                        Cancel
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </View>
  </View>,
  " ",
]
`;

exports[`DashboardScreen Screen renders correctly 1`] = `
Array [
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": 1259,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 40,
          "fontWeight": "800",
          "marginBottom": 15,
          "marginTop": 15,
          "textAlign": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "500",
          "marginBottom": 20,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      No debts! 😎
    </Text>
    <Text
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "500",
          "marginBottom": 20,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      No tasks for today! 🎉
    </Text>
    <RCTScrollView
      style={
        Object {
          "paddingBottom": 95,
          "paddingHorizontal": 10,
        }
      }
    >
      <View />
    </RCTScrollView>
    <footer
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#009999",
          "bottom": "0",
          "display": "flex",
          "height": "75px",
          "justifyContent": "space-evenly",
          "left": "0",
          "paddingInline": "5px",
          "position": "fixed",
          "width": "100%",
          "zIndex": 100,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Calendar 
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Tasks 
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Home 
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Mates 
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Bills 
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "opacity": 1,
          }
        }
      >
        <img
          alt=" "
          src={Object {}}
          style={
            Object {
              "height": "35px",
              "width": "35px",
            }
          }
        />
        <Text>
           Debts 
        </Text>
      </View>
    </footer>
  </View>,
  " ",
  " ",
]
`;

exports[`ManageFlatsScreen Screen renders correctly 1`] = `
Array [
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "height": "calc(100vh - 75px)",
        "overflow": "scroll",
        "paddingBottom": "20px",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 40,
          "fontWeight": "800",
          "marginBottom": 15,
          "marginTop": 15,
          "textAlign": "center",
        }
      }
    >
      Manage flats
    </Text>
    <View
      style={
        Array [
          Object {
            "borderRadius": 3,
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 3,
          },
          undefined,
          false,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": false,
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#5cd07f",
              "borderColor": "#2089dc",
              "borderRadius": 5,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "marginLeft": 25,
              "marginRight": 25,
              "marginTop": 10,
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingVertical": 1,
                "textAlign": "center",
              }
            }
          >
            Create flat
          </Text>
        </View>
      </View>
    </View>
  </View>,
  " ",
  " ",
]
`;
